@@ -17,10 +17,12 @@ Restlet changes log
    "keystorePath", "keystorePassword", "keyPassword" for the HTTPS one.
  - Simple 3.1 connector now supports parameters: "defaultThreads", "waitTimeMs" for the HTTP server and "keystorePath", "keystorePassword",
    "keyPassword" for the HTTPS one.
+ - Moved Jetty5 to com.noelios.ext.jetty5 package so that Javadocs of both versions can be displayed.
  
 [Other changes] 
  - Added ParameterList.getFirstValue() methods taking and additional "defaultValue" parameter.
- - 
+ - Parametrized connectors
+ - Added HTTPS connector for Jetty 6.0
 
 1.0 beta 17 (2006-07-19)
 [Bugs fixed]
